[project]
name = "trt-log-inspector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rakandhiya Daanii Rachmanto", email = "rakandhiya.daanii@gmail.com" }
]
dependencies = [
    "prettytable>=3.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "coverage>=7.5.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trt_log_inspector"]
